--- a/reference/atw-invoice-system-packing-fee.v1.yaml
+++ b/reference/atw-invoice-system-packing-fee.v1.yaml
@@ -2,6 +2,7 @@ openapi: 3.0.0
 info:
   title: atw-invoice-system-packing-fee
   version: '1.0'
+  description: ''
 servers:
   - url: 'http://localhost:3000'
 paths:
@@ -144,39 +145,31 @@ components:
       type: object
       description: ''
       x-examples:
-        Alice Smith:
-          id: 142
-          firstName: Alice
-          lastName: Smith
-          email: alice.smith@gmail.com
-          dateOfBirth: '1997-10-31'
-          emailVerified: true
-          signUpDate: '2019-08-24'
+        materials:
+          material-A: 100
+          material-B: 200
+          material-C: 300
+          material-D: 400
+          material-E: 500
       properties:
-        id:
+        material-A:
           type: integer
-          description: Unique identifier for the given user.
-        firstName:
-          type: string
-        lastName:
-          type: string
-        email:
-          type: string
-          format: email
-        dateOfBirth:
-          type: string
-          format: date
-          example: '1997-10-31'
-        emailVerified:
-          type: boolean
-          description: Set to true if the user's email has been verified.
-        createDate:
-          type: string
-          format: date
-          description: The date that the user was created.
+          description: 100 yen
+        material-B:
+          type: integer
+          description: 200 yen
+        material-C:
+          type: integer
+          description: 300 yen
+        material-D:
+          type: integer
+          description: 400 yen
+        material-E:
+          type: integer
+          description: 500 yen
       required:
-        - id
-        - firstName
-        - lastName
-        - email
-        - emailVerified
+        - material-A
+        - material-B
+        - material-C
+        - material-D
+        - material-E
