--- a/reference/ainori_delivery_company_v1.0.yaml
+++ b/reference/ainori_delivery_company_v1.0.yaml
@@ -18,7 +18,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/company'
+                description: ''
+                type: array
+                items:
+                  $ref: '#/components/schemas/company'
               examples:
                 Get postage fee.:
                   value:
